--- a/src/cards.css
+++ b/src/cards.css
@@ -68,6 +68,7 @@ html {
     }
   
     .cardGroup__cardDescription {
+      flex-grow: inherit;
       /* flex-grow, flex-shrink, flex-basis */
     }
 @media screen and (min-width: 800px){
