--- a/src/cards.css
+++ b/src/cards.css
@@ -24,6 +24,7 @@ html {
   justify-content: flex-start;
   align-items: center;
   padding: 15px 0;
+}
 
 .card__descriptionIcon {font-size: 32px; margin-bottom: 10px;}
 
